--- a/Week8Example.html
+++ b/Week8Example.html
@@ -150,7 +150,7 @@
     <h2>Change Image</h2>
     <div class="demo">
       <button id="imgBtn">Change Image</button>
-      <img id="demoImage" src="https://placecats.com/200/200" alt="Kitten">
+      <img id="demoImage" src="https://placebeard.it/200x200" alt="beard">
     </div>
   </section>
 
@@ -263,7 +263,7 @@
     let toggled = false;
     imgBtn.addEventListener("click", () => {
       if (toggled) {
-        demoImage.src = "https://placecats.com/200/200";
+        demoImage.src = "https://placebeard.it/200x200";
       } else {
         demoImage.src = "https://placebear.com/200/200";
       }
